# PCA_Exp

./: README.md  data_handler.py  pca_exp_multiple_batches.ipynb  pca_exp_tutorial.ipynb
exp_data_example/: ede0.txt  ede1.txt  ede10.txt  ede2.txt  ede3.txt  ede4.txt  ede5.txt  ede6.txt  ede7.txt  ede8.txt  ede9.txt
exp_data_example/multiple_batches/batch1/: ede0.txt  ede1.txt  ede2.txt  ede3.txt  ede4.txt  ede5.txt  ede6.txt  ede7.txt  (+2 more)
pca_exp/: README.md  confusion_machine.py  data_handler.py  pca_machine.py  setup.cfg
pca_exp/generate_samples/: kubo_toyabe.py
pca_exp/src/pca_exp/: confusion_machine.py  data_handler.py  data_handler_2D.py  pca_machine.py
pca_exp/src/pca_exp/generate_samples/: kubo_toyabe.py
pca_exp/src/pca_exp/utils/: utils.py
pca_exp/utils/: utils.py
tests/: example_tutorial.py  test_data_handler.py  test_generateKT.py
tests/BaFe2Se2O/: emu00058546.nxs  emu00058547.nxs  emu00058548.nxs  emu00058549.nxs  emu00058550.nxs  emu00058551.nxs  emu00058552.nxs  emu00058553.nxs  emu00058554.nxs  emu00058555.nxs  emu00058556.nxs  emu00058557.nxs  emu00058558.nxs  emu00058559.nxs  emu00058560.nxs  emu00058561.nxs  emu00058562.nxs  emu00058563.nxs  emu00058564.nxs  emu00058565.nxs  emu00058566.nxs  emu00058567.nxs  emu00058568.nxs  emu00058569.nxs  emu00058570.nxs  emu00058571.nxs  emu00058572.nxs  emu00058573.nxs  emu00058574.nxs  emu00058575.nxs  emu00058576.nxs  emu00058577.nxs  emu00058578.nxs  emu00058579.nxs  emu00058580.nxs  emu00058581.nxs  emu00058582.nxs  emu00058583.nxs  emu00058584.nxs  emu00058585.nxs  (+4 more)
tests/ExData/: headers.txt
(+15 files in other folders)
