[metadata]
name = pca_exp
version = 0.1
author = Tymoteusz Tula
author_email = tymoteusz.tula@gmail.com
description = Principal component analysis of experimental data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src